# mel

./: .gitignore  Cargo.toml  migration.sh  readme
account/: Cargo.toml  Dockerfile  Dockerfile.dev
account/logs/: keeper.txt
account/src/: lib.rs
account/src/app/: account.rs  app.rs  auth.rs  channels.rs  interface.rs  mod.rs  settings.rs
account/src/config/: app.rs  config.rs  db.rs  kafka.rs  redis.rs
account/src/connections/: db.rs
account/src/downstream/: downstream.rs
account/src/migration/: m20241231_191343_first_one.rs  m20241231_194402_melony.rs  m20250201_001938_create_user.rs  m20250201_001957_create_workspace.rs  m20250201_003049_create_workspace_user.rs  m20250201_003101_create_channel.rs  m20250201_003108_create_channel_user.rs  migrator.rs  mod.rs
account/src/migrations/: mod.rs
account/src/repository/: channel.rs  channel_user.rs  mod.rs  user.rs  workspace.rs  workspace_user.rs
account/src/server/: server.rs
channel/: Cargo.toml  Dockerfile  Dockerfile.dev
chat/: Cargo.toml  Dockerfile  Dockerfile.dev
development/: dockercompose.yaml  migration.sh
emoji/: index.html  script.js  style.css
extras/: Cargo.toml  Dockerfile  (+1 more)
gateway/: Cargo.toml  Dockerfile  Dockerfile.dev
gateway/src/: lib.rs  main.rs
gateway/src/app/: account.rs  app.rs  interfaces.rs  media.rs  mod.rs
gateway/src/config/: app.rs  config.rs  downstream.rs  kafka.rs  mod.rs  object_store.rs  redis.rs
gateway/src/downstream/: downstream.rs  mod.rs  operations.rs
gateway/src/downstream/account/: account.rs  mod.rs  operations.rs
gateway/src/downstream/channel/: channel.rs  mod.rs  operations.rs
gateway/src/downstream/extras/: extras.rs  mod.rs  operations.rs
gateway/src/downstream/messaging/: messaging.rs  mod.rs  operations.rs
gateway/src/errors/: mod.rs
gateway/src/handlers/: handler.rs  mod.rs
gateway/src/handlers/api/: api.rs  media.rs  mod.rs
gateway/src/handlers/api/auth/: mod.rs
gateway/src/handlers/api/media/: media.rs
gateway/src/handlers/api/messages/: mod.rs
gateway/src/handlers/ws/: client.rs  hub.rs  mod.rs  ws.rs
gateway/src/middleware/: authentication.rs  context.rs  errors.rs  extractor.rs  mod.rs  request_id.rs  request_response.rs
gateway/src/models/: context.rs  error_response.rs  mod.rs  other.rs  response.rs  success_response.rs
picasso/: Cargo.toml  Dioxus.toml  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
picasso/assets/: blog.css  main.css
picasso/assets/scss/: spaces.scss
picasso/assets/styles/: blog.css  blog.css.map  blog.scss  main.css  main.css.map  main.scss
picasso/assets/styles/helpers/: constants.scss  shapes.scss
picasso/src/: index.scss  lib.rs  main.rs  main.tsx
picasso/src/app/: App.scss  App.tsx
picasso/src/components/: index.ts
picasso/src/components/FullUserProfile/: FullUserProfile.tsx  style.module.scss
picasso/src/components/channel/: index.ts
picasso/src/components/channel/ChannelViewChannelMember/: ChannelViewChannelMember.tsx  index.ts
picasso/src/components/channel/EmojiCount/: EmojiCount.tsx  index.ts
picasso/src/components/channel/Header/: Header.tsx
picasso/src/components/channel/JoinChannel/: JoinChannel.tsx  index.ts
picasso/src/components/channel/Message/: Message.tsx
picasso/src/components/channel/MiniProfilePicture/: MiniProfilePicture.tsx  index.ts
picasso/src/components/conditionals/If/: If.tsx
picasso/src/components/conditionals/IfElse/: IfElse.tsx  index.ts
picasso/src/components/icons/: ActiveEmoji.tsx  AddEmoji.tsx  Greater.tsx  Plus.tsx  Send.tsx  emoji.tsx  index.ts
picasso/src/containers/: index.ts
picasso/src/containers/Channel/: Channel.tsx
picasso/src/containers/MessageInput/: MessageInput.tsx
picasso/src/containers/Messages/: Messages.tsx
picasso/src/containers/Theme/: Theme.tsx
picasso/src/containers/ToggleTheme/: Theme.tsx
picasso/src/networking/: Websocket.ts
picasso/src/pages/Auth/Login/: Login.tsx  style.module.scss
picasso/src/router/: mod.rs  router.tsx
picasso/src/scss/: alignment.scss  constant.scss  shapes.scss  utils.scss
picasso/src/store/: index.ts  store.ts
picasso/src/store/Channel/: channel.ts  index.ts  reducer.ts  type.ts
picasso/src/store/context/: theme.ts
picasso/src/tools/constants/: constant.ts
picasso/src/tools/hooks/: theme.tsx
picasso/src/tools/utils/: time.ts
picasso/src/views/: blog.rs
sdk/: Cargo.toml  build.rs  rustfmt.toml
sdk/src/: lib.rs
sdk/src/constants/: constant.rs  mod.rs
sdk/src/errors/: connection.rs  grpc.rs  mod.rs  repo.rs  s3.rs
sdk/src/generated_proto_rs/: mel_account.rs  mel_channel.rs  mel_extras.rs  mel_messaging.rs  mod.rs
sdk/src/models/: mod.rs
sdk/src/models/db/: mod.rs
sdk/src/models/db/account/: channel.rs  channel_user.rs  mod.rs  user.rs  workspace.rs  workspace_user.rs
sdk/src/models/db/auth/: user.rs
sdk/src/models/db/channel/: bookmarks.rs  channel.rs  channel_user.rs  mod.rs  pins.rs
sdk/src/models/db/extras/: audit_logs.rs  chat_media.rs  devices.rs  emails.rs  emoji.rs  history.rs  mod.rs  profile_media.rs  search.rs  short_url.rs  short_url_track.rs
sdk/src/models/db/messaging/: chat.rs  direct.rs  emoji.rs  message.rs  mod.rs  platform_user_message.rs  reaction.rs  response.rs
sdk/src/models/others/: mod.rs
sdk/src/models/others/auth/: channel.rs  create.rs  mod.rs  workspace.rs
sdk/src/models/others/channel/: mod.rs
sdk/src/models/others/extras/: mod.rs
sdk/src/models/others/messaging/: mod.rs
sdk/src/proto/account/: account.proto  request.proto  response.proto
sdk/src/proto/channel/: channel.proto  request.proto  response.proto
sdk/src/proto/extras/: extras.proto  request.proto  response.proto
sdk/src/proto/messaging/: messaging.proto  request.proto  response.proto
sdk/src/proto/utils/: util.proto
sdk/src/utils/: error.rs  helper.rs  mod.rs  utility.rs
sdk/src/utils/kafka/: context.rs  event.rs  kafka.rs  mod.rs  util.rs
sdk/src/utils/objects/: mod.rs  store.rs  types.rs
sdk/src/utils/redis/: mod.rs
sdk/src/utils/types/: mod.rs
(+97 files in other folders)
