[package]
name = "account"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
doc = false
path= "src/bin/main.rs"

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
chrono = "0.4.39"
lapin = "2.5.0"
sdk = {path = "../sdk"}
sea-orm = "1.1.1"
sea-orm-migration = "1.1.2"
serde = "1.0.217"
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
uuid = { version = "1.11.0", features = ["v4"] }
validator = "0.19.0"
