[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws", "multipart"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors", "decompression-full", "compression-full", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.11.0", features = ["v4"] }
sdk ={ path = "../sdk" }
tracing-appender = "0.2.3"
validator = "0.19.0"
http-body-util = "0.1.2"
tower = "0.5.2"

[[bin]]
name = "gateway"
path = "src/main.rs"
