[package]
name = "picasso"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
