[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = "0.37.0"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.22"
redis = { version = "0.27.6", features = ["tokio-rustls-comp"] }
prost = "0.12.3"
thiserror = "2.0.7"
validator = "0.19.0"
sea-orm = "1.1.3"
argon2 = "0.5.3"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
chrono = "0.4.39"
tonic = "0.10.2"
serde_json = "1.0.135"
aws-sdk-s3 = "1.77.0"
aws-credential-types = "1.2.1"
aws-config = "1.5.17"
axum = "0.8.1"
async-trait = "0.1.85"

[build-dependencies]
tonic-build = "0.10.2"
